fix(style): add text-wrap to the card description

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
 .card__description {
   color: var(--gray-500);
   margin-bottom: 1.5rem;
+  text-wrap: auto;
 }
 
 .card__author-container {
